--- a/clone/src/App.css
+++ b/clone/src/App.css
@@ -5,10 +5,12 @@
   margin: 0;
   padding: 0;
   height: 100%;
-  width: 250px;
+  width: 190px;
   background-color: gainsboro;
 }
 .Header {
   text-align: center;
+  margin: 0;
+  padding: 0;
 
 }
