--- a/clone/src/App.css
+++ b/clone/src/App.css
@@ -1,11 +1,10 @@
 .Rightbar {
    text-align: center;
   height: 100vw;
-  width: 200vh;
   margin: 0;
   padding: 0;
   height: 100%;
-  width: 290px;
+  width: 297px;
   background-color: gainsboro; 
   
 
@@ -13,7 +12,7 @@
 .Sidebar {
   text-align: center;
   height: 100vw;
-  width: 100vh;
+  width: 200vh;
   margin: 0;
   padding: 0;
   height: 100%;
@@ -21,6 +20,13 @@
   background-color: gainsboro;
 }
 .Header {
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+scroll-snap-align: start;
+}
+.Main {
   text-align: center;
   margin: 0;
   padding: 0;
